# CoffeeOJ-judge

./: .gitignore  Cargo.toml  Main.cpp  compiler_config.toml  config.toml  package.json  readme.md  startup.sh
assets/1001/: 3.in
assets/1003/: 3.out
assets/1359/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
assets/src/: test.py  test.rs
assets/tests/comparer/: attack3.txt  attack5.txt  attack6.txt  hello_world.txt
src/: compile.rs  compiler.rs  file.rs  judge.rs  judger.rs  lib.rs  main.rs  runner.rs  startup.rs
src/judge/: comparer.rs  compiler.rs  consts.rs  file.rs  judge.rs  macros.rs  mod.rs  runner.rs  task.rs
src/models/: submission.rs
src/routes/: index.rs
src/routes/api/v1/: mod.rs  submit.rs
src/server/: mod.rs  startup.rs
src/server/models/: submission.rs
src/server/routes/: mod.rs
src/server/routes/api/v1/: submit.rs
src/thread_pool/: mod.rs  test.rs  tests.rs  thread_pool.rs  thread_pool_builder.rs
src/utils/: telemetry.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/assets/: main.scss
