[package]
name = "coffee_oj_judger"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "coffee_oj_judger"

[dependencies]
nix = "0.26.2"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.3"
log = "0.4"
tracing-actix-web = "0.7.2"
once_cell = "1.7.2"
